ちょっと編集テスト

--- a/articles/681f5b570bfabc411f57.md
+++ b/articles/681f5b570bfabc411f57.md
@@ -1,8 +1,8 @@
 ---
-title: "github連携テスト"
-emoji: "😊"
+title: "サーバレスなRSSリーダーを自作する(python,aws)"
+emoji: "🐍"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: []
+topics: [AWS,Lambda,python,Docker]
 published: false
 ---
 
