lambda-rss-reader-bot 本文全部かいた

--- a/articles/681f5b570bfabc411f57.md
+++ b/articles/681f5b570bfabc411f57.md
@@ -6,27 +6,27 @@ topics: [AWS,Lambda,python,Docker,VS Code]
 published: false
 ---
 
-# はじめに
+## はじめに
 - 生まれながらにRSSリーダーを自作したい欲求があったので、自作しました
-- 以下を試すことがサブ目的です
+- 以下を試せます
     - VSCode Remote Containerで開発
     - Cloudwatch(Eventbridge)によるLambdaの定期実行
     - Lambdaをコンテナで動かす
 
-# 成果物
+## 成果物
 - 登録しておいたサイトのRSSが1時間おきに自動取得され、Discordの専用チャンネルに投稿されます
     - ここ画像
 
-# 構成図
+## 構成図
 - ここ画像
 - EventbridgeをトリガーにRSS情報を取得するLambdaが起動し、webhookでdiscordに送信します
 - RSS取得先URLはSystems Managerパラメータストアに保存します。デプロイなしでURLの追加変更ができ便利です
 - Lambdaはコンテナイメージを利用して動きます、言語はPythonです
     - デプロイはgithub Actionsを利用して自動化しています
 
-# 実装
+## 実装
     - リポジトリ全体は[こちら](https://github.com/mini-hiori/lambda-rss-reader-bot)
-## RSSリーダー本体(Lambda)
+### RSSリーダー本体(Lambda)
 - RSSの取得&解析はfeedparserというライブラリを利用して行います
     - [参考](https://note.nkmk.me/python-feedparser-tutorial/)
     - 最小構成は以下です、get_rssにRSSのURLを渡すと記事情報が得られます
@@ -64,7 +64,7 @@ def get_rss(endpoint: str) -> List[RssContent]:
     - コンテナを利用するLambdaの作成自体はGUIから可能です。  
     作成時にコンテナイメージを保存したURIを求められるので、次項のデプロイを済ませてから作成します  
     (ここ画像)
-## デプロイ(Github Actions)
+### デプロイ(Github Actions)
 - [参考](https://dev.classmethod.jp/articles/github-action-ecr-push/)
 - 上記記事を参考に以下を行うことでデプロイの自動化が可能です
     - ECRの作成
@@ -72,7 +72,7 @@ def get_rss(endpoint: str) -> List[RssContent]:
     - Github Actionsのyamlファイル作成、.github/workflows/main.ymlに配置
     - GitHubのSecretsにIAMログイン情報等を記載
         - AWS_ECR_REPO_NAMEにはリポジトリ名を記載することに注意。URIではありません(1敗)
-## webhookURL・RSS取得先URLの管理(Systems Manager)
+### webhookURL・RSS取得先URLの管理(Systems Manager)
 - URL類はSystems Managerパラメータストアに保存します
     - RSS取得先URLについては改行区切りで単一パラメータに保存してしまっています  
 - (ここ画像)
@@ -100,7 +100,7 @@ def get_target_url() -> List[str]:
 
 - ここまでで、Lambdaを手動実行すればRSSがDiscordに送られる状態が実現します
 
-## 定期実行(Eventbridge)
+### 定期実行(Eventbridge)
 - [参考](https://dev.startialab.blog/etc/a105)
 - EventbridgeをLambdaのトリガーに設定すると定期実行が可能です
 - 今回は1時間おきに実行するので「rate(1 hour)」で設定しました
@@ -109,7 +109,7 @@ def get_target_url() -> List[str]:
 
 - RSS情報が1時間おきにDiscordに送られれば完成です
 
-# 改善点
+## 改善点
 - LambdaやECR、Eventbridgeは今回手動作成しましたが、本当はSAWやterraform等でコード化した方が良いと思います
 - pythonのDockerfileはalpineでない方がパフォーマンスが良いらしく、改善の余地があります
     - [参考](https://pythonspeed.com/articles/alpine-docker-python/)
